--- a/sharelist-cilent/package.json
+++ b/sharelist-cilent/package.json
@@ -8,11 +8,14 @@
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.1.1",
+    "react-addons-css-transition-group": "^16.0.0-alpha.3",
+    "react-addons-transition-group": "^16.0.0-alpha.3",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
     "react-scripts": "1.0.17",
+    "reactstrap": "next",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
     "redux-logger": "^3.0.6",
