--- a/sharelist-cilent/package.json
+++ b/sharelist-cilent/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
+    "datatables.net": "^1.10.16",
+    "datatables.net-bs": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "history": "^4.7.2",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
